--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^5.2.1"
+    "p-queue": "^6.6.1",
+    "puppeteer": "^5.2.1",
+    "puppeteer-cluster": "^0.22.0"
   }
 }
